2002-11-02  Elliott Hughes  <enh@acm.org>

	* src/error.cpp:
	* src/error.h: Massive rewrite. Use printf style strings and
	consolidate formatting into common routines. Improves output of
	filenames, and adds some infrastructure for naming (and thus
	suppressing) arbitrary errors - based on patch 368.
	(ErrorString::Array): Fix a memory leak.
	* src/body.cpp:
	* src/diagnose.h:
	* src/diagnose.cpp:
	* src/jikes.cpp:
	* src/jikesapi.h:
	* src/modifier.cpp:
	* src/option.cpp:
	* src/option.h:
	* src/semantic.h:
	* src/stream.cpp:
	* src/stream.h:
	* doc/jikes.1: Fallout from the error changes. More const safety,
	slight changes to command line arguments.
	* src/Makefile.am: Update dependences.
	* src/Makefile.in: Regenerate.

2002-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/semantic.h (class Semantic): Fix prototype.

2002-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/modifier.cpp (ProcessAccessFlag): Overdid last commit -
	restore behavior of pedantic_modifier_order.

2002-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ReportConstructorNotFound, ProcessTypeExpression),
	(GetAnonymousType): Minor touchups.
	* src/bytecode.cpp (ByteCode): Move ACC_SUPER logic here...
	* src/class.h (class ClassFile): from here, since modifier.cpp
	should not implicitly set it.

2002-11-02  Elliott Hughes  <enh@acm.org>

	* src/access.h: Helper functions for the changes to modifier.cpp.
	* src/error.cpp:
	* src/error.h: Consolidate some modifier error messages.
	* src/modifier.cpp: Removal of duplicate code, regularization of
	checking.
	* src/semantic.h (ReportSemError) A new form for the common case
	where there's only a single token involved, not a span.
	(ProcessAccessFlag) New prototype.

2002-10-31  Eric Blake  <ebb9@email.byu.edu>

	* src/unparse.cpp (Unparse): Fix unparse output typo.

2002-10-28  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintCATCH_ARRAY_TYPE): Fix typo.
	* src/body.cpp (ProcessTryStatement): Detect array catch types,