@@ -166,6 +166,7 @@ public:
         MULTIPLE_PUBLIC_TYPES,
         TYPE_IN_MULTIPLE_FILES,
         PACKAGE_TYPE_CONFLICT,
+        FILE_FILE_CONFLICT,
         MISMATCHED_TYPE_AND_FILE_NAMES,
         REFERENCE_TO_TYPE_IN_MISMATCHED_FILE,
         ZERO_DIVIDE_CAUTION,
