@@ -1,3 +1,9 @@
+2002-11-06  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/error.h:
+	* src/error.cpp (FILE_FILE_CONFLICT): Restore error I accidentally
+	deleted in last patch.
+
 2002-11-02  Elliott Hughes  <enh@acm.org>
 
 	* src/error.cpp:
